[gd_scene load_steps=13 format=2]

[ext_resource path="res://pics/notebook.png" type="Texture" id=1]
[ext_resource path="res://pics/btn_prev.png" type="Texture" id=2]
[ext_resource path="res://pics/btn_next.png" type="Texture" id=3]
[ext_resource path="res://sences/notebook_gioithieu.gd" type="Script" id=4]
[ext_resource path="res://guide/teacher.png" type="Texture" id=5]
[ext_resource path="res://sound/mouse_click.mp3" type="AudioStream" id=6]
[ext_resource path="res://pics/Speaker_ON.png" type="Texture" id=7]
[ext_resource path="res://pics/Speaker_MUTE.png" type="Texture" id=8]
[ext_resource path="res://fonts/BeVietnamPro-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[node name="notebook_gioithieu" type="TextureRect"]
margin_left = 175.0
margin_top = 132.0
margin_right = 899.0
margin_bottom = 616.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prev" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -63.0
margin_right = 69.0
margin_bottom = -16.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 655.0
margin_top = -63.0
margin_right = 713.0
margin_bottom = -16.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 67.0
margin_right = 313.0
margin_bottom = 369.0
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="text" type="Label" parent="."]
margin_left = 415.0
margin_top = 44.0
margin_right = 685.0
margin_bottom = 411.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Để tiến hành các test khác nhau nhằm định danh vi sinh vật, cần phân lập và làm thuần chủng vi sinh. Đặc biệt, các test sinh hóa hoặc giải trình tự dựa trên khuếch đại gen bằng các cặp mồi chung (universal primer) chỉ có hiệu lực (đúng) khi sử dụng chủng thuần. "
align = 3
valign = 1
autowrap = true

[node name="page_p" type="Label" parent="."]
margin_left = 164.0
margin_top = 445.0
margin_right = 204.0
margin_bottom = 459.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_n" type="Label" parent="."]
margin_left = 525.0
margin_top = 445.0
margin_right = 565.0
margin_bottom = 462.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="voice" type="AudioStreamPlayer" parent="."]
volume_db = 10.0

[node name="intro_speaker" type="TextureButton" parent="."]
margin_left = 13.0
margin_top = 18.0
margin_right = 525.0
margin_bottom = 530.0
rect_scale = Vector2( 0.07, 0.07 )
toggle_mode = true
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teacher" type="Sprite" parent="."]
position = Vector2( -84.4109, 456.515 )
scale = Vector2( 0.597049, 0.578416 )
texture = ExtResource( 5 )

[connection signal="pressed" from="prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="intro_speaker" to="." method="_on_intro_speaker_pressed"]
